--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,155 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sujin Grebhahn-Yang</title>
+    <script
+      src="https://kit.fontawesome.com/1964e8c68f.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/main.scss" />
-    <title>Hello, World!</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <!-- HEADER -->
+    <header>
+      <!-- <nav>
+        <label for="menu"></label>
+          <i class="fa-solid fa-bars"></i>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav> -->
+
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#projects">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-------------------- MAIN ----------------------->
+    <main>
+      <!------- ABOUT ---------->
+      <section id="about">
+        <div class="sujin-pic"></div>
+        <h1>Sujin Grebhahn-Yang</h1>
+        <h2>Front-End Developer</h2>
+        <p>Hi, I'm a front-end developer</p>
+      </section>
+
+      <!--------- SOCIAL MEDIA BTN ---------->
+      <section class="social-media">
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-solid fa-file-invoice"></i>
+      </section>
+      <button class="scroll-btn">Scroll Down</button>
+
+      <!------- PROJECTS ---------->
+      <section id="projects">
+        <h2>Projects</h2>
+        <article class="project first">
+          <h3>Project Name</h3>
+          <div class="screenshot pj1"></div>
+          <div class="btn-page one">
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-solid fa-display"></i>
+          </div>
+        </article>
+
+        <article class="project second">
+          <h3>Project Name</h3>
+          <div class="screenshot pj2"></div>
+          <div class="btn-page two">
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-solid fa-display"></i>
+          </div>
+
+        </article>
+
+        <article class="project third">
+          <h3>Project Name</h3>
+          <div class="screenshot pj3"></div>
+          <div class="btn-page three">
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-solid fa-display"></i>
+          </div>
+
+        </article>
+
+        <article class="project fourth">
+          <h3>Project Name</h3>
+          <div class="screenshot pj4"></div>
+          <div class="btn-page fourth">
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-solid fa-display"></i>
+          </div>
+        </article>
+
+        <article class="project fifth">
+          <h3>Project Name</h3>
+          <div class="screenshot pj5"></div>
+          <div class="btn-page five">
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-solid fa-display"></i>
+          </div>
+        </article>
+      </section>
+    </main>
+
+
+
+    <!---------------------- FOOTER ------------------------------>
+    <footer>
+      <section class="footer-container">
+        <section class="footer-socialMedia">
+          <i class="fa-brands fa-github"></i>
+          <i class="fa-brands fa-linkedin"></i>
+        </section>
+        <!--------- CONTACT FORM ---------->
+        <h2 id="contact">Contact</h2>
+        <form action="POST">
+          <div class="name">
+            <label for="name">Name:</label>
+            <input type="text" id="name">
+          </div>
+          <div class="email">
+            <label for="email">E-Mail:</label>
+            <input type="text" id="email">
+          </div>
+          <div class="message">
+            <label for="message">Message:</label>
+            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+          </div>
+          <button type="submit" class="submit">Send Message</button>
+        </form>
+        <p> &#169; 2023 Sujin Grebhahn-Yang</p>
+        <button type="button" class="top" id="about">
+          <i class="fa-solid fa-arrow-up"></i>
+        </button>
+      </section>
+    </footer>
   </body>
 </html>
