--- a/src/index.html
+++ b/src/index.html
@@ -37,17 +37,32 @@
         <div class="sujin-pic"></div>
         <h1>Sujin Grebhahn-Yang</h1>
         <h2 class="job-title">Front-End Developer</h2>
-        <p>Hi, I'm a front-end developer</p>
+        <div class="bio">
+          <p>
+            I started getting into web development with the Digital Career
+            Institute since 2022.
+          </p>
+          <p>
+            Building front-end websites is my biggest passion. I am also a
+            problem solver, independent and work well in a team.
+          </p>
+          <p>
+            I like walking my dog, jogging too. I like experiments in cooking as
+            much as my working style. As a family person, I enjoy spending time
+            with my family, but I also enjoy meeting people with different ideas
+            who inspire me.
+          </p>
+        </div>
       </section>
 
       <!--------- SOCIAL MEDIA BTN ---------->
       <section class="social-media-container">
         <section class="icons">
-          <a href="" target="_blank"><i class="fa-brands fa-github"></i></a>
-          <a href="http://" target="_blank"
+          <a href="https://github.com/grebhahnyang/Sujin_UIB_Project.git" target="_blank"><i class="fa-brands fa-github"></i></a>
+          <a href="#" target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
-          <a href="http://" target="_blank"
+          <a href="#" target="_blank"
             ><i class="fa-solid fa-file-invoice"></i
           ></a>
         </section>
@@ -60,7 +75,9 @@
           <h3>Speaker Shop</h3>
           <p>HTML, CSS, SASS</p>
           <div class="btn-page one">
-            <a href="https://github.com/FbW22-E10/10_01_2023_uib-framework-sassy-speaker-shop_ex1-grebhahnyang.git" target="_blank"
+            <a
+              href="https://github.com/FbW22-E10/10_01_2023_uib-framework-sassy-speaker-shop_ex1-grebhahnyang.git"
+              target="_blank"
               ><i class="fa-brands fa-github"></i
             ></a>
             <!-- <a href="http://" target="_blank"><i class="fa-solid fa-display"></i></a> -->
@@ -71,7 +88,7 @@
           <h3>ZOOM Session</h3>
           <p>HTML, CSS</p>
           <div class="btn-page two">
-            <a href="http://" target="_blank"
+            <a href="https://github.com/FbW22-E10/uib-layout-zoom-session-grebhahnyang.git" target="_blank"
               ><i class="fa-brands fa-github"></i
             ></a>
             <!-- <a href="http://" target="_blank"><i class="fa-solid fa-display"></i></a> -->
@@ -82,7 +99,7 @@
           <h3>Doughnut Shop</h3>
           <p>HTML, CSS</p>
           <div class="btn-page three">
-            <a href="http://" target="_blank"
+            <a href="https://github.com/FbW22-E10/06_12_22_uib-sweety-layout-ex5-grebhahnyang.git" target="_blank"
               ><i class="fa-brands fa-github"></i
             ></a>
             <!-- <a href="http://" target="_blank"><i class="fa-solid fa-display"></i></a> -->
@@ -93,7 +110,7 @@
           <h3>Travel Destination</h3>
           <p>HTML, CSS</p>
           <div class="btn-page four">
-            <a href="http://" target="_blank"
+            <a href="https://github.com/FbW22-E10/06_12_22_uib-layout-travel-destination-form-ex3-grebhahnyang.git" target="_blank"
               ><i class="fa-brands fa-github"></i
             ></a>
             <!-- <a href="http://" target="_blank"><i class="fa-solid fa-display"></i></a> -->
@@ -104,7 +121,7 @@
           <h3>Music Player</h3>
           <p>HTML, CSS</p>
           <div class="btn-page five">
-            <a href="http://" target="_blank"
+            <a href="https://github.com/FbW22-E10/uib-layout-neumorphic-music-player-ex3-grebhahnyang.git" target="_blank"
               ><i class="fa-brands fa-github"></i
             ></a>
             <!-- <a href="http://" target="_blank"><i class="fa-solid fa-display"></i></a> -->
@@ -137,10 +154,10 @@
         </div>
         <!-- FOOTER SOCIAL MEDIA -->
         <section class="footer-socialMedia">
-          <a href="http://" target="_blank"
+          <a href="https://github.com/grebhahnyang/Sujin_UIB_Project.git" target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="http://" target="_blank"
+          <a href="#" target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </section>
